src/z80asm/z80asm2/t/45-symbols/expected/local_label_04.txt
% z88dk-z80asm -v -dump-after-symbol-collection t/45-symbols//input/local_label_04.asm
Define constant: __CPU_ZILOG__ = 1
Define constant: __CPU_Z80__ = 1
Define constant: __FLOAT_GENMATH__ = 1
Assembling t/45-symbols/input/local_label_04.asm...
t/45-symbols/input/local_label_04.asm:3:1: error: Local label without a parent label: @l1
    @l1:            ; error, no parent label
    ^
t/45-symbols/input/local_label_04.asm:4:8: error: Local label without a parent label: @l2
        jp @l2      ; error, undefined symbol
           ^
t/45-symbols/input/local_label_04.asm:4:8: error: Undefined symbol: @l2
        jp @l2      ; error, undefined symbol
           ^
Assembly completed with 3 errors
